apps/namespaces/monitoring/kube-prometheus-stack/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - grafana.home
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
